<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mindvision_camera</name>
  <version>0.1.0</version>
  <description>A template for ROS packages.</description>
  <maintainer email="chen.junn@outlook.com">Chen Jun</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/chenjunnn/ros2_mindvision_camera</url>
  <url type="bugtracker">https://github.com/chenjunnn/ros2_mindvision_camera/issues</url>
  <author email="chen.junn@outlook.com">Chen Jun</author>

  <!-- buildtool_depend: dependencies of the build process -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- depend: build, export, and execution dependency -->
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>image_transport_plugins</depend>
  <depend>camera_info_manager</depend>

  <exec_depend>camera_calibration</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
